deployment/yaml/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wcareweb
  namespace: wcdemo2-cn
  labels:
    app: wcare-application
    subname: wcareweb
spec:
  selector:
    matchLabels:
      app: wcare-application
      subname: wcareweb
  replicas: 1
  template:
    metadata:
      labels:
        app: wcare-application
        subname: wcareweb
    spec:
      containers:
        - name: container-wcareweb
          image: image-registry.openshift-image-registry.svc:5000/wcdemo2-cn/wcareweb:latest
          imagePullPolicy: Always
          ports:
            - name: my-http
              containerPort: 9020
