deployment/yaml/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wcareweb
  namespace: wcdemo2-cn
  labels:
    app: wcare-application
    subname: wcareweb
spec:
  type: ClusterIP
  ports:
    - name: my-http
      port: 9090
      targetPort: my-http
  selector:
    app: wcare-application
    subname: wcareweb
