deployment/yaml/04-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: wcareweb
  namespace: wcdemo2-cn
  labels:
    app: wcare-application
    subname: wcareweb
spec:
  path: /
  to:
    kind: Service
    name: wcareweb
    weight: 100
  port:
    targetPort: my-http
